# general_orders

./: .gitignore  CMakeLists.txt  README.md
include/: Company.h  Platoon.h  Soldier.h  classes.h  name_list.h
src/: Company.cpp  Platoon.cpp  Soldier.cpp  classes.cpp  classes.h  main.cpp  name_list.cpp  name_list.h
